German/Lenguajes y compiladores/Lab3/tests/bad/bad03.imp
data N = O | S <N>

-- repeated parameters
method suma (n : N, n : N) returns (r : N)
{
}

